cmake_minimum_required(VERSION 3.5)
project(QwtExamples LANGUAGES CXX)

add_subdirectory(animation)
add_subdirectory(BarChart)
add_subdirectory(bode)
add_subdirectory(controls)
add_subdirectory(cpuplot)
add_subdirectory(curvedemo)
add_subdirectory(dials)
add_subdirectory(distrowatch)
add_subdirectory(friedberg)
add_subdirectory(itemeditor)
add_subdirectory(legends)
add_subdirectory(oscilloscope)
add_subdirectory(polardemo)
add_subdirectory(polarspectrogram)
add_subdirectory(radio)
add_subdirectory(rasterview)
add_subdirectory(realtime)
add_subdirectory(refreshtest)
add_subdirectory(scatterplot)
add_subdirectory(simpleplot)
add_subdirectory(sinusplot)
add_subdirectory(spectrogram)
add_subdirectory(splineeditor)
add_subdirectory(stockchart)
add_subdirectory(sysinfo)
add_subdirectory(tvplot)
